all files added

--- a/index.html
+++ b/index.html
@@ -15,73 +15,72 @@
     <link rel = "stylesheet" type = "text/css" href = "myStyle.css" />
 
 
-
   </head>
   <body>
-    <section id="slider">
-      <div id="demo" class="carousel slide" data-ride="carousel" class="right carousel-control">
 
-  <!-- Indicators -->
-  <ul class="carousel-indicators">
-    <li data-target="#demo" data-slide-to="0" class="active"></li>
-    <li data-target="#demo" data-slide-to="1"></li>
-    <li data-target="#demo" data-slide-to="2"></li>
-  </ul>
+    <div id="main-item">
 
-  <!-- The slideshow -->
-  <div class="carousel-inner">
+    <nav>
+         <ul>
 
-    <div class="carousel-item active shadow-lg">
-      <img src="taylor-swift.jpg" style="opacity:0.5;"  alt="" class="shadow" width="100%" height="700px">
-    </div>
-
-    <div class="carousel-item shadow-lg">
-      <img src="image1.jpg" style="opacity:0.5;"  alt="" class="shadow" width="100%" height="700px">
-    </div>
-
-    <div class="carousel-item shadow-lg">
-      <img src="Arjit.jpg" style="opacity:0.5;"  alt="" class="shadow" width="100%" height="700px">
-    </div>
-
-    <div class="carousel-item  shadow-lg">
-      <img src="guitarist_guitar.jpg" class="shadow"  style="opacity:0.5;" alt="Chicago" width="100%" height="700px">
-
-    </div>
-    <div class="carousel-item  shadow-lg">
-      <img src="image4.jpg" class="shadow"  style="opacity:0.5;" alt="Chicago" width="100%" height="700px">
-    </div>
+           <li>
+             <a href="#"><img src="Images\logo.png" class="logoImg"></a>
+           </li>
 
 
+           <li>
+             <a href="#">Home</a>
+           </li>
 
-  </div>
+           <li>
+             <a href="#">About</a>
+           </li>
 
-  <!-- Left and right controls -->
-  <!-- <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a> -->
+             <li>
+               <a href="#">Songs</a>
+             </li>
+
+           <li>
+             <a href="#">Search</a>
+           </li>
+
+           <li>
+             <a href="#">Contact</a>
+           </li>
 
 
-<div style="position:absolute;top:23%; left:5%;">
-  <img src="justin.jpg" class="animated infinite bounceIn slow" alt="Smiley face" width="230" height="230" id="sliderImg">
-</div>
-<div style="position:absolute;top:23%; right:5%;">
-  <img src="selena.jpg" class="animated infinite bounceIn slow" alt="Smiley face" width="230" height="230" id="sliderImg">
-</div>
+         </ul>
+     </nav>
 
+
+
+<section class="carousel">
+   <div id="carousel-item">
+     <a href="#">
+       <img src="Artists\c3.jpg" class="carousel-image carousel-img-1"/>
+     </a>
+   </div>
+
+   <div id="carousel-item">
+     <a href="#">
+       <img src="Artists\c1.jpg" class="carousel-image carousel-img-2"/>
+     </a>
+   </div>
+
+   <div id="carousel-item">
+     <a href="#">
+       <img src="Artists\c2.jpg" class="carousel-image carousel-img-3"/>
+     </a>
+   </div>
+
+</section>
 <div id="caption">
-  <h1>NO MUSIC</h1>
-  <h1>NO LIFE</h1>
-</div>
-
+  <h1>NO MUSIC<br>NO LIFE</h1>
 </div>
 
 
-    </section>
-<section id="descriptionSection"  style="background-color:white;">
-  <div id="about-para">
+<section id="descriptionSection"  style="background-color:white";>
+  <div class="about-para">
     <p>Music is a form of art; an expression of emotions through
     harmonic frequencies. <span class="text-highlight">Music is also
     a form  of entertainment</span> that puts sounds together in a
@@ -93,7 +92,7 @@
   </div>
 </section>
 
-
+</div>
 
     <section id="actorSection">
     <div id="container">
@@ -460,6 +459,10 @@
            </ul>
         </div>
       </section>
+      <div style="background-color:yellow;height:300px;">
+        <span><img src="logo.png" height="350" width="350"><h1 style="color:red;">Ninja stdio</h1></span>
+      </div>
+
       <script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
