COntact section done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="Home">
 
     <nav>
-         <ul>
+         <ul class="header-container">
 
            <li>
              <a href="#"><img src="Images\logo.png" class="logoImg"></a>
@@ -55,19 +55,19 @@
 <section class="carousel">
    <div id="carousel-item">
      <a href="#">
-       <img src="Artists\c3.jpg" class="carousel-image carousel-img-1"/>
+       <img src="Images\c3.jpg" class="carousel-image carousel-img-1"/>
      </a>
    </div>
 
    <div id="carousel-item">
      <a href="#">
-       <img src="Artists\c1.jpg" class="carousel-image carousel-img-2"/>
+       <img src="Images\c1.jpg" class="carousel-image carousel-img-2"/>
      </a>
    </div>
 
    <div id="carousel-item">
      <a href="#">
-       <img src="Artists\c2.jpg" class="carousel-image carousel-img-3"/>
+       <img src="Images\c2.jpg" class="carousel-image carousel-img-3"/>
      </a>
    </div>
 
@@ -97,7 +97,7 @@
       <div id="container">
 
    <div class="commomCard" id="AmitabhCard">
-      <img src="Amitabh.jpg" alt="salman khan"  class="animated infinite rotateInUpLeft delay-2s">
+      <img src="Images\Amitabh.jpg" alt="salman khan"  class="animated infinite rotateInUpLeft delay-2s">
       <h1 class="actorName" style="color:#0000CD;">Amitabh Bachchan</h1>
       <p class="actorDescriptions"> Indian film actor, film producer,
          television host,and former politician.  </p>
@@ -114,7 +114,7 @@
 
 
  <div class="commomCard" style="border-bottom: 5px solid black; background-color:#f6f6ee;">
-    <img src="shah-rukh-khan-wallpaper.jpg" alt="salman khan"   class="animated infinite rotateIn delay-2s slower">
+    <img src="Images\shah-rukh-khan-wallpaper.jpg" alt="salman khan"   class="animated infinite rotateIn delay-2s slower">
     <h1 class="actorName">Shahrukh Khan</h1>
     <p class="actorDescriptions">SRK, is an Indian actor, film producer
       and television personality.</p>
@@ -128,7 +128,7 @@
  </div>
 
  <div class="commomCard" style="border-bottom: 5px solid #663399; background-color:#f0f5f5;">
-    <img src="dalman.jpg" alt="salman khan"   class="animated infinite zoomIn delay-2s">
+    <img src="Images\dalman.jpg" alt="salman khan"   class="animated infinite zoomIn delay-2s">
     <h1 class="actorName" style="color:#663399;">Salman Khan</h1>
     <p class="actorDescriptions">Indian film actor, producer,
        and hosting the reality show, Bigg Boss.</p>
@@ -143,7 +143,7 @@
 
 
 <div class="commomCard" style="border-bottom: 5px solid red; background-color:#fff5e6;">
-   <img src="Akshay.jpg" alt="salman khan"  class="animated infinite jackInTheBox delay-2s slower">
+   <img src="Images\Akshay.jpg" alt="salman khan"  class="animated infinite jackInTheBox delay-2s slower">
    <h1 class="actorName" style="color:red;">Akshay Kumar</h1>
    <p class="actorDescriptions"> Indian-born Canadian actor, producer, martial
      artist and television personality.</p>
@@ -158,7 +158,7 @@
 
 
  <div class="commomCard" style="border-bottom: 5px solid #C71585; background-color:#ffe6ff;">
-    <img src="selena-gomez.jpg"  class="animated infinite zoomIn delay-2s" alt="salman khan">
+    <img src="Images\selena-gomez.jpg"  class="animated infinite zoomIn delay-2s" alt="salman khan">
     <h1 class="actorName" style="color:#C71585;">Selena Gomez</h1>
     <p class="actorDescriptions">American singer, songwriter, actress,and children's
       television series Barney & Friends.  </p>
@@ -172,7 +172,7 @@
   </div>
 
 <div class="commomCard" style="border-bottom: 5px solid black; background-color:#f5f5f0;">
-   <img src="disha-patani-bollywood-hd-wallpaper-preview.jpg"  class="animated infinite jackInTheBox delay-2s slower" alt="salman khan">
+   <img src="Images\disha-patani-bollywood-hd-wallpaper-preview.jpg"  class="animated infinite jackInTheBox delay-2s slower" alt="salman khan">
    <h1 class="actorName">Disha Patani</h1>
    <p class="actorDescriptions">Disha Patani is an Indian actress and
       indian who works primarily in Hindi films.</p>
@@ -190,7 +190,7 @@
 
 
 <div class="commomCard" style="border-bottom: 5px solid #FF8C00; background-color:#ffffe6;">
-   <img src="MD.jpg" alt="salman khan"   class="animated infinite rotateIn delay-2s slower">
+   <img src="Images\MD.jpg" alt="salman khan"   class="animated infinite rotateIn delay-2s slower">
    <h1 class="actorName" style="color:#FF8C00;">Madhuri Dixit</h1>
    <p class="actorDescriptions">Indian actress, producer, and television personality.
       influential celebrities of Indian cinema</p>
@@ -332,34 +332,34 @@
             <div id="artistContainer">
 
 
-            <img src="Artists\hot-Shirley-Setia.jpg" style="border:2px solid gray;">
+            <img src="Images\hot-Shirley-Setia.jpg" style="border:2px solid gray;">
 
 
 
 
-             <img src="Artists\himesh Reshammiya.jpg"  style="border:2px solid gray;">
+             <img src="Images\himesh Reshammiya.jpg"  style="border:2px solid gray;">
 
 
 
-             <img src="Artists\Simi-Chahal.jpg"   style="border:2px solid gray;">
+             <img src="Images\Simi-Chahal.jpg"   style="border:2px solid gray;">
 
 
 
-             <img src="Artists\sonuNigam.jpg"   style="border:2px solid gray;">
+             <img src="Images\sonuNigam.jpg"   style="border:2px solid gray;">
 
 
-             <img src="Artists\diljit_dosanjh-1.jpg"   style="border:2px solid gray;">
-
-
-
-            <img src="Artists\shreya.jpg"  style="border:2px solid gray;">
+             <img src="Images\diljit_dosanjh-1.jpg"   style="border:2px solid gray;">
 
 
 
-            <img src="Artists\sanu.jpg"  style="border:2px solid gray;">
+            <img src="Images\shreya.jpg"  style="border:2px solid gray;">
 
 
-            <img src="Artists\lata-mangeshkar.jpg"  style="border:2px solid gray;">
+
+            <img src="Images\sanu.jpg"  style="border:2px solid gray;">
+
+
+            <img src="Images\lata-mangeshkar.jpg"  style="border:2px solid gray;">
 
           </div>
 
@@ -383,8 +383,8 @@
 
       </section>
 
-      <section id="Contact" style=" background-image: linear-gradient(to right,#000000, #0f0f0a);">
-         <h1 class="contact-section-heading mb50px" style="color:gray;">
+      <section id="Contact">
+         <h1 class="contact-section-heading mb50px">
                    Contact
           </h1>
           <div id="contact-container">
@@ -397,11 +397,27 @@
                   </form>
             </div>
          <div id="my-details-container">
-              <h3> Get In touch </h3>
+             <div id="personal-details">
+
+               <div class="person-images">
+                 <img src="Images\lokesh.jpg">
+               </div>
+
+               <div class="person-name">
+
+                  <p>Lokesh Kumar<br>
+                 Chitkara University</p>
+               </div>
+
+
+
+
+             </div>
+              <!-- <h3> Get In touch </h3>
                 <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                    when an unknown printer took a galley of type and scrambled it to make a type
                    specimen book.
-                </p>
+                </p> -->
               <h3> My Address </h3>
                 <div class="my-details-info-container">
                   <i class="fas fa-map-marker-alt"></i>
